--- a/grid/style.css
+++ b/grid/style.css
@@ -10,6 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     background-color: #1A1C28;
+    border-radius: 0px;
 }
 
 .grid-box {
